--- a/Лабораторная 6/html/index.html
+++ b/Лабораторная 6/html/index.html
@@ -14,7 +14,7 @@
 			<input type="text" name="name" placeholder="Название авто" required>
 			<input type="text" name="fio" required placeholder="ФИО владельца">
 			<input type="text" name="number" required placeholder="Номер авто">
-			<input type="time" name="time" required placeholder="Время стоянки">
+			<input type="number" name="time" min="0" required placeholder="Время стоянки">
 			<textarea rows="5" cols="40" placeholder="Адрес владельца"></textarea>
 			<select>
 			</select>				
